Add exclusive management mode for optimization

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,6 +12,8 @@ ksm {
   readonly = true
   readonly = ${?KSM_READONLY}
 
+  exclusive-management = false
+  exclusive-management = ${?KSM_EXCLUSIVE_MANAGEMENT}
 }
 
 parser {
